# finally

./: .gitignore  CLAUDE.md
.claude/agents/: codex-reviewer.md
backend/: pyproject.toml
backend/app/market/: __init__.py  cache.py  factory.py  interface.py  massive_client.py  models.py  seed_prices.py  simulator.py  stream.py
backend/tests/market/: test_cache.py  test_factory.py  test_massive.py  test_models.py  test_simulator.py  test_simulator_source.py  test_stream.py
planning/: PLAN.md  REVIEW.md
